Animate the NTP instead of a snapshot

When opening a NTP a screenshot of the NTP is animated instead of the
real NTP.
The screenshot of the NTP is taken outside of the view hierarchy.

This creates multiple problems:
- The safe area insets have to be passed to the NTP before the snapshot
  is taken so it can adapt its layout.
- The images of the elements in the NTP (Most Visited, suggestions...)
  are displayed asynchronously, so they are empty on the snapshot.

In order to reduce the complexity on iPhone X and to have the images
displayed, it is possible to display the real view instead of its
snapshot.

As side effects, the user can interact with the NTP during the animation
and it is possible that it takes more computational ressources.

Animation before this CL: https://drive.google.com/file/d/1ma2Q_fGsK3lRSCAL91MZ3mXCD_R_tYEn/view
Animation with this CL: https://drive.google.com/file/d/1xHL2ANNPwtYEY0vffqVuCvEfhrVXl_4v/view

Bug: 792918
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ibeb74f9ca96130db49bcf082356b55e6cf8d4d9a
Reviewed-on: https://chromium-review.googlesource.com/814295
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523067}
Former-commit-id: 0afa75731f532f923ef6bed0feee3a6ccfde72ec