ios/chrome/browser/ui/browser_view_controller.mm
@@ -751,9 +751,6 @@ NSString* const kBrowserViewControllerSnackbarCategory =
 // Returns the view to use when animating a page in or out, positioning it to
 // fill the content area but not actually adding it to the view hierarchy.
 - (UIImageView*)pageOpenCloseAnimationView;
-// Returns the view to use when animating full screen NTP paper in, filling the
-// entire screen but not actually adding it to the view hierarchy.
-- (UIImageView*)pageFullScreenOpenCloseAnimationView;
 // Updates the toolbar display based on the current tab.
 - (void)updateToolbar;
 // Starts or stops broadcasting the toolbar UI and main content UI depending on
@@ -1736,26 +1733,40 @@ applicationCommandEndpoint:(id<ApplicationCommands>)applicationCommandEndpoint {
   self.inNewTabAnimation = YES;
   if (!inBackground) {
     UIView* animationParentView = _contentArea;
-    // Create the new page image, and load with the new tab page snapshot.
+    // Create the new page image, and load with the new tab snapshot except if
+    // it is the NTP.
     CGFloat newPageOffset = 0;
-    UIImageView* newPage;
+    UIView* newPage;
+    CGFloat offset = 0;
     if (tab.webState->GetLastCommittedURL() == kChromeUINewTabURL &&
         !_isOffTheRecord && !IsIPadIdiom()) {
+      offset = 0;
       animationParentView = self.view;
-      newPage = [self pageFullScreenOpenCloseAnimationView];
+      newPage = tab.view;
+      newPage.userInteractionEnabled = NO;
+      // Compute a frame for the new page by removing the status bar height from
+      // the bounds of |self.view|.
+      CGRect viewBounds, remainder;
+      CGRectDivide(self.view.bounds, &remainder, &viewBounds, StatusBarHeight(),
+                   CGRectMinYEdge);
+      newPage.frame = viewBounds;
     } else {
-      newPage = [self pageOpenCloseAnimationView];
+      UIImageView* pageScreenshot = [self pageOpenCloseAnimationView];
+      tab.view.frame = _contentArea.bounds;
+      pageScreenshot.image =
+          [tab updateSnapshotWithOverlay:YES visibleFrameOnly:YES];
+      newPage = pageScreenshot;
+      offset =
+          pageScreenshot.frame.size.height - pageScreenshot.image.size.height;
     }
     newPageOffset = newPage.frame.origin.y;
 
-    [tab view].frame = _contentArea.bounds;
-    newPage.image = [tab updateSnapshotWithOverlay:YES visibleFrameOnly:YES];
     [animationParentView addSubview:newPage];
     CGPoint origin = [self lastTapPoint];
     page_animation_util::AnimateInPaperWithAnimationAndCompletion(
-        newPage, -newPageOffset,
-        newPage.frame.size.height - newPage.image.size.height, origin,
-        _isOffTheRecord, NULL, ^{
+        newPage, -newPageOffset, offset, origin, _isOffTheRecord, NULL, ^{
+          [tab view].frame = _contentArea.bounds;
+          newPage.userInteractionEnabled = YES;
           [newPage removeFromSuperview];
           self.inNewTabAnimation = NO;
           // Use the model's currentTab here because it is possible that it can
@@ -2494,13 +2505,6 @@ bubblePresenterForFeature:(const base::Feature&)feature
 
 - (void)expectNewForegroundTab {
   _expectingForegroundTab = YES;
-}
-
-- (UIImageView*)pageFullScreenOpenCloseAnimationView {
-  CGRect viewBounds, remainder;
-  CGRectDivide(self.view.bounds, &remainder, &viewBounds, StatusBarHeight(),
-               CGRectMinYEdge);
-  return [[UIImageView alloc] initWithFrame:viewBounds];
 }
 
 - (UIImageView*)pageOpenCloseAnimationView {
